# P32-FW

./: .clangd  .gitignore  .merge_file_PqS49p  .merge_file_RELTCY  .merge_file_tZr8RY  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.md  ProjectOptions.cmake  README.md  build.bat  version.txt
cmake/: Littlefs.cmake  Options.cmake
doc/: Skew_Calibration_Calculator.ods  debugging_profiling.md  logging_components.md  proxy_support.md  prusa_printer_settings.ini
doc/ESP/: README.md
doc/skew/: Skew_Calibration_Calculator.ods  skew.stl
include/: tasks.hpp
include/buddy/: ccm_thread.hpp  littlefs_internal.h  priorities_config.h  unreachable.hpp
include/common/: aggregate_arity.hpp  array_extensions.hpp  fsm_base_types.hpp  hotend_type.hpp  hw_check.hpp  nozzle_diameter.hpp  printer_model.hpp
include/device/: board.h
lib/: AddLibbgcode.cmake  AddMarlin.cmake  AddPrintf.cmake  AddPrusaErrorCodes.cmake  AddTMCStepper.cmake  AddTinyusb.cmake
lib/SG14/: README  (+3 more)
src/: CMakeLists.txt  main.cpp  usb_device.c
src/common/feature/: CMakeLists.txt
src/common/feature/auto_retract/: auto_retract.cpp  auto_retract.hpp
src/common/feature/belt_tuning/: belt_tuning.cpp  belt_tuning_wizard.cpp
src/common/feature/cancel_object/: CMakeLists.txt  cancel_object.cpp  cancel_object.hpp
src/common/feature/ceiling_clearance/: CMakeLists.txt  ceiling_clearance.cpp  ceiling_clearance.hpp
src/common/feature/chamber/: chamber.cpp  chamber.hpp  chamber_enums.hpp
src/common/feature/chamber_filtration/: chamber_filtration.cpp  chamber_filtration.hpp  chamber_filtration_enums.hpp
src/common/feature/cork/: CMakeLists.txt  tracker.cpp  tracker.hpp
src/common/feature/emergency_stop/: emergency_stop.cpp
src/common/feature/factory_reset/: CMakeLists.txt  factory_reset.cpp  factory_reset.hpp
src/common/feature/manual_belt_tuning/: CMakeLists.txt  manual_belt_tuning_config.hpp  manual_belt_tuning_wizard.cpp  manual_belt_tuning_wizard.hpp
src/common/feature/nozzle_cleaning_failed/: CMakeLists.txt  nozzle_cleaning_failed_wizard.cpp  nozzle_cleaning_failed_wizard.hpp
src/common/feature/print_status_message/: CMakeLists.txt  print_status_message.hpp  print_status_message_data.hpp  print_status_message_formatter_buddy.cpp  print_status_message_formatter_buddy.hpp  print_status_message_guard.cpp  print_status_message_guard.hpp  print_status_message_mgr.cpp  print_status_message_mgr.hpp
src/common/feature/ramming/: ramming_sequence.cpp  ramming_sequence.hpp  standard_ramming_sequence.cpp
src/common/feature/remote_bed/: CMakeLists.txt  remote_bed.cpp  remote_bed.hpp
src/common/feature/retract_tracker/: CMakeLists.txt  retract_tracker.cpp  retract_tracker.hpp
src/common/feature/safety_timer/: safety_timer.cpp  safety_timer.hpp
src/common/feature/stepper_timeout/: CMakeLists.txt  stepper_timeout.cpp  stepper_timeout.hpp
src/common/feature/xbuddy_extension/: cooling.cpp  cooling.hpp  xbuddy_extension.cpp  xbuddy_extension.hpp
src/common/marlin_server_types/: CMakeLists.txt  client_fsm_types.h  client_response.cpp  client_response.hpp  general_response.hpp  marlin_server_state.h  warning_type.cpp  warning_type.hpp
src/common/marlin_server_types/fsm/: CMakeLists.txt  manual_belt_tuning_phases.hpp  nozzle_cleaning_failed_mapper.hpp  nozzle_cleaning_failed_phases.hpp  nozzle_cleaning_phases.hpp  safety_timer_phases.cpp  safety_timer_phases.hpp
src/common/marlin_server_types/python_binding/: fsm_python_binding.cpp  pyproject.toml
src/gui/screen/: CMakeLists.txt  dialog_safety_timer.cpp  dialog_safety_timer.hpp  screen_cancel_objects.cpp  screen_cancel_objects.hpp  screen_chamber_filtration.hpp  screen_factory_reset.cpp  screen_factory_reset.hpp  screen_hw_mmu.cpp  screen_hw_mmu.hpp  screen_m600.cpp  screen_m600.hpp  screen_menu_leds.cpp  screen_menu_leds.hpp  screen_nozzle_cleaning.cpp  screen_nozzle_cleaning.hpp  screen_nozzle_cleaning_failed.cpp  screen_nozzle_cleaning_failed.hpp  screen_preheat.cpp  screen_preheat.hpp
src/gui/screen/filament/: screen_filament_detail.cpp  screen_filament_detail.hpp  screen_filament_management_list.cpp  screen_filament_management_list.hpp  screen_filaments_loaded.cpp  screen_filaments_reorder.hpp  screen_filaments_visibility.cpp  screen_filaments_visibility.hpp
src/gui/screen/selftest/: CMakeLists.txt  screen_belt_tuning.cpp  screen_belt_tuning.hpp  screen_manual_belt_tuning.cpp  screen_manual_belt_tuning.hpp
src/gui/screen/toolhead/: screen_toolhead_settings.cpp  screen_toolhead_settings.hpp  screen_toolhead_settings_common.cpp  screen_toolhead_settings_common.hpp  screen_toolhead_settings_dock.cpp  screen_toolhead_settings_dock.hpp  screen_toolhead_settings_fs.cpp  screen_toolhead_settings_fs.hpp  screen_toolhead_settings_nozzle_offset.cpp  screen_toolhead_settings_nozzle_offset.hpp
tests/unit/common/feature/cork/: CMakeLists.txt  cork.cpp
tests/unit/common/feature/cork/freertos/: mutex.hpp
tests/unit/common/feature/ramming/: CMakeLists.txt
tests/unit/common/probe_analysis/: CMakeLists.txt  tests.cpp
tests/unit/common/probe_analysis/probes/: probe_110_1600937955.ipp
tests/unit/lang/text_fit/: CMakeLists.txt  large_display_tests.cpp  mini_display_tests.cpp  text_fit_enums.hpp  text_fit_test.cpp  text_fit_test.hpp
tests/unit/lang/translator/: CMakeLists.txt  provider.cpp  providerCPUFLASH.cpp  providerFILE.cpp
tests/unit/lang/translator/MOfilesTesting/: cs.txt  de.txt  es.txt  fr.txt  it.txt  keys.txt  pl.txt
tests/unit/lang/translator/option/: enable_translation_uk.h
tests/unit/lib/Marlin/phase_stepping/: CMakeLists.txt  float_vs_fixed.cpp  lut_old.cpp  lut_old.hpp  rounding.cpp
tests/unit/lib/Marlin/phase_stepping/option/: has_burst_stepping.h
tests/unit/mmu2-modbus/: CMakeLists.txt
tests/unit/module/utils/: CMakeLists.txt  combo_counter_tests.cpp  rate_limiter_tests.cpp  timer_event_period_tracker_tests.cpp  timer_tests.cpp
utils/: bootstrap.py  build.py  crash_dump_debug.py  crash_dump_info.py  extract_error_texts.py  gen_puppies_descriptor.py  generate-error-codes-report.py  qoi_packer.py
(+1196 files in other folders)
